// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography Base > Text2XL should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text2xl"
  >
    I am a Text2XL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > Text2XL should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text2xl el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a Text2XL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > Text2XS should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text2xs"
  >
    I am a Text2XS
  </div>
</DocumentFragment>
`;

exports[`Typography Base > Text2XS should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text2xs el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a Text2XS
  </div>
</DocumentFragment>
`;

exports[`Typography Base > Text3XL should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text3xl"
  >
    I am a Text3XL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > Text3XL should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text3xl el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a Text3XL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextBase should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base"
  >
    I am a TextBase
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextBase should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a TextBase
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextL should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-l"
  >
    I am a TextL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextL should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-l el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a TextL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextSM should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-sm"
  >
    I am a TextSM
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextSM should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-sm el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a TextSM
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextXL should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-xl"
  >
    I am a TextXL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextXL should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-xl el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a TextXL
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextXS should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-xs"
  >
    I am a TextXS
  </div>
</DocumentFragment>
`;

exports[`Typography Base > TextXS should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <div
    class="el-text-base el-text-xs el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a TextXS
  </div>
</DocumentFragment>
`;

exports[`Typography Helpers > BodyText should match a snapshot 1`] = `
<DocumentFragment>
  <p
    class="el-text-base el-body-text"
  >
    I am body text
  </p>
</DocumentFragment>
`;

exports[`Typography Helpers > BodyText should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <p
    class="el-text-base el-body-text el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am body text
  </p>
</DocumentFragment>
`;

exports[`Typography Helpers > SmallText should match a snapshot 1`] = `
<DocumentFragment>
  <small
    class="el-text-base el-small-text"
  >
    I am small text
  </small>
</DocumentFragment>
`;

exports[`Typography Helpers > SmallText should match a snapshot 2`] = `
<DocumentFragment>
  <small
    class="el-text-base el-small-text"
  >
    I am small text
  </small>
</DocumentFragment>
`;

exports[`Typography Helpers > SmallText should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <small
    class="el-text-base el-small-text el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am small text
  </small>
</DocumentFragment>
`;

exports[`Typography Helpers > SmallText should match a snapshot with all modifiers 2`] = `
<DocumentFragment>
  <small
    class="el-text-base el-small-text el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am small text
  </small>
</DocumentFragment>
`;

exports[`Typography Helpers > SmallText should match a snapshot with all modifiers 3`] = `
<DocumentFragment>
  <small
    class="el-text-base el-small-text el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    i am some text
  </small>
</DocumentFragment>
`;

exports[`Typography Helpers > SubTitle should match a snapshot 1`] = `
<DocumentFragment>
  <h2
    class="el-text-base el-subtitle"
  >
    I am a subtitle
  </h2>
</DocumentFragment>
`;

exports[`Typography Helpers > SubTitle should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <h2
    class="el-text-base el-subtitle el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a subtitle
  </h2>
</DocumentFragment>
`;

exports[`Typography Helpers > Title should match a snapshot 1`] = `
<DocumentFragment>
  <h1
    class="el-text-base el-title"
  >
    I am a title
  </h1>
</DocumentFragment>
`;

exports[`Typography Helpers > Title should match a snapshot with all modifiers 1`] = `
<DocumentFragment>
  <h1
    class="el-text-base el-title el-has-grey-text el-has-regular-text el-has-bold-text el-has-italic-text el-has-medium-text el-has-margin el-has-no-margin el-has-section-margin el-has-centered-text el-has-disabled-text el-has-capitalised-text el-has-upper-cased-text el-intent-primary"
  >
    I am a title
  </h1>
</DocumentFragment>
`;
